# ai-runtime-monitor

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  install.sh  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/claude_monitoring/: __init__.py  config.py  constants.py  dashboard.html  db.py  monitor.py  report.py  utils.py  watch.py  watch_dashboard.html
tests/: conftest.py  test_api.py  test_chrome.py  test_cli.py  test_config.py  test_cost.py  test_db.py  test_jsonl_watcher.py  test_monitor_main.py  test_monitor_utils.py  test_process.py  test_sensitive.py  test_watch.py  test_watch_addon.py  test_watch_cli.py  test_watch_parsing.py
