[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-runtime-monitor"
dynamic = ["version"]
description = "CrowdStrike-style runtime monitor for AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Rajan Yadav" }]
keywords = ["ai", "monitoring", "claude", "security", "observability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
]
dependencies = ["psutil>=5.9.0", "watchdog>=3.0"]

[project.optional-dependencies]
watch = ["mitmproxy>=10.0"]
plot = ["matplotlib>=3.5"]
all = ["mitmproxy>=10.0", "matplotlib>=3.5"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.4.0"]

[project.urls]
Homepage = "https://github.com/rajan-cforge/ai-runtime-monitor"
Repository = "https://github.com/rajan-cforge/ai-runtime-monitor"
Issues = "https://github.com/rajan-cforge/ai-runtime-monitor/issues"
Changelog = "https://github.com/rajan-cforge/ai-runtime-monitor/blob/main/CHANGELOG.md"

[project.scripts]
ai-monitor = "claude_monitoring.monitor:main"
claude-watch = "claude_monitoring.watch:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
claude_monitoring = ["*.html"]

[tool.setuptools_scm]
fallback_version = "0.1.0"

[tool.ruff]
target-version = "py39"
line-length = 120
[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
